# Planify-Telegram-bot

./: README.md  main.py  pyproject.toml
app/: config.py
app/bot/: bot_instance.py  handlers.py
app/db/: mongo.py
app/services/: ai_service.py  google_service.py
